Bug 101978 - Some ComboBox (more evident on ones with graphical objects inside) flashes (redraw) on hover
Summary: Some ComboBox (more evident on ones with graphical objects inside) flashes (r...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.0.0.5 release
Hardware: All All
: medium minor
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Flickering-UI List-Combobox-RenderContext-regressions
  Show dependency treegraph
 
Reported: 2016-09-07 20:17 UTC by Gabriele Ponzo
Modified: 2019-12-28 01:51 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabriele Ponzo 2016-09-07 20:17:00 UTC
Versione: 5.2.1.2
Build ID: 31dd62db80d4e60af04904455ec9c9219178d620
Thread CPU: 4; Versione SO: Windows 6.2; Resa interfaccia: predefinito; 
Versione locale: it-IT (it_IT); Calc: group

1. Insert an image (in Writer, Calc or whatever)
2. Right click on it
3. Select Area
4. Go to Color Tab
5. Open Color ComboBox
6. Just hover with mouse pointer among lines
RESULT: the Combo is redrawn at each line hovered

I tried with mouse AND touchpad


I've tried with NotePad and it doesn't happen there.
Comment 1 Gabriele Ponzo 2016-09-07 20:27:01 UTC
Please try also with the Styles Combo on Format Bar in Writer: much shorter.
Comment 2 Gabriele Ponzo 2016-09-07 20:28:21 UTC
and notice that doing that (on previous comment) the Save Icon on Standard Bar, flashes as well.
Comment 3 Gabriele Ponzo 2016-09-07 20:29:02 UTC
But you have to insist for a while ;)
Comment 4 Gabriele Ponzo 2016-09-07 20:32:10 UTC
Finally notice that ALL ComboBox flash. It's just more visible with graphically full ones.
Comment 5 Buovjaga 2016-10-06 10:28:57 UTC
Confirmed with the comboboxes/dropdown menus.
The Save button flicker is not very noticeable. I see maybe 1 flicker at the start.

Win 7 Pro 64-bit Version: 5.3.0.0.alpha0+
Build ID: 7da2f3ce9f7b049c177a735a146dae84a764d3f7
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-10-04_03:49:06
Locale: fi-FI (fi_FI); Calc: CL

Version: 5.2.0.0.beta1 (x64)
Build ID: 1e9933ef611c66bcded94b84052543c78cf1c223
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
Locale: fi-FI (fi_FI)
Comment 6 Gabriele Ponzo 2016-10-06 19:33:03 UTC
Probably point 1 of my first comment may be misleading, since I've just tried it again and a better definition could be:
1. Draw a shape (in Writer, Calc or whatever)

The rest of list is correct.

I've just tried on a different (customer's) PC and it still happens.

Win7 Home Premium 64bit Italiaan
Versione: 5.2.2.2 (x64)
Build ID: …f3ad (I'm copying manually ;)
Thread CPU: 2; Versione SO: Windows 6.1; Resa interfaccia: predefinito; 
Versione locale: it-IT (it_IT); Calc: group
Comment 7 Gabriele Ponzo 2016-10-06 19:45:55 UTC
Importance:	low  minor

Well, surely it's not something blocking, but is really bad to see, especially from a (ex)dev eyes :)
Comment 8 Buovjaga 2016-10-07 04:29:10 UTC
(In reply to Gabriele Ponzo from comment #7)
> Importance:	low  minor
> 
> Well, surely it's not something blocking, but is really bad to see,
> especially from a (ex)dev eyes :)

https://wiki.documentfoundation.org/images/0/06/Prioritizing_Bugs_Flowchart.jpg
Comment 9 Gabriele Ponzo 2016-11-29 23:21:43 UTC Comment hidden (obsolete)
Comment 10 Gabriele Ponzo 2016-11-29 23:23:25 UTC Comment hidden (obsolete)
Comment 11 Aron Budea 2017-02-17 05:47:23 UTC Comment hidden (bibisection)
Comment 12 Aron Budea 2017-02-17 05:49:51 UTC
This is a regression that came with 5.0, and is specific to default rendering. Another prominent example is the font size dropdown in Writer.
Flickering started with the comment referenced below. Adding Cc: to Tomaž Vajngerl, please take a look.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=dca01def7885ad69cf66edd75cf8207a5adb64f9
author		Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2015-05-07 05:18:37 (GMT)
committer	Jan Holesovsky <kendy@collabora.com>	2015-05-07 07:57:50 (GMT)

"refactor ListBox/ComboBox to use RenderContext"
Comment 13 Aron Budea 2018-02-07 14:39:18 UTC
Not sure why this was set to low priority.
Comment 14 Buovjaga 2018-02-07 15:02:05 UTC
(In reply to Aron Budea from comment #13)
> Not sure why this was set to low priority.

Because it is just a flicker bug.
Comment 15 Aron Budea 2018-02-08 03:12:50 UTC
(In reply to Buovjaga from comment #14)
> Because it is just a flicker bug.
Sure, that's what severity is for. The bug doesn't prevent professional work, but it gives a bad impression, and is quite annoying, as combo boxes are everywhere (similarly there's bug 113714 that is the same, just with the main menu). Plus it's a regression.
Comment 16 Miklos Vajna 2019-06-14 13:23:26 UTC
I can reproduce this, let's see if an approach similar to the menu flicker can work here as well.
Comment 17 Miklos Vajna 2019-06-17 08:38:00 UTC
To be more precise, I can reproduce this on Windows GDI only; Windows GL, Linux gtk3 works fine, and I would expect that Linux gen also flickers, but in practice it does not.
Comment 18 Commit Notification 2019-06-17 17:10:13 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/d4714b0fdb81e6e561ae526cc517ecc9a40a603e%5E%21

tdf#101978 vcl combobox/listbox floating window: avoid flicker

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Miklos Vajna 2019-06-18 07:06:44 UTC
The combo/listbox popup no longer flickers with the above in general.
Comment 20 V Stuart Foote 2019-06-18 14:48:20 UTC
On Windows 10 Home 64-bit en-US with
Version: 6.4.0.0.alpha0+ (x86)
Build ID: 99971d009e9c96d1d47aec14ecfbfeaa06dc140d
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-06-18_03:59:27
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded

The combobox/listbox flicker is gone. And this also fixed bug 93840!

@Miklos, any thought on what is still happening with 'default' rendering in the Help -> About dialog (bug 118856). Also, look to need a new BZ issue for the Color palette widget frame holding the color swatches? While the Draw 'Color Bar' is rock solid, the Color picker dialog across the UI flickers badly on mouse pointer movement between swatches.
Comment 21 Miklos Vajna 2019-06-18 14:50:30 UTC
Yes, one commit / bug is the ideal. So if there is anything remaining, then a follow-up bug is better than reopening this one.

If you can add it to the bug 91488 tracker, that's great; so when I have time to work on flicker bugs, I know what to do. Thanks!
Comment 22 Commit Notification 2019-07-02 13:43:59 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/c41bd615230f67bd5eaedcb95702bacd031e0a20%5E%21

tdf#101978 vcl combobox/listbox floating window: avoid flicker

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.