tdf#101978 vcl combobox/listbox floating window: avoid flicker

Regression from commit dca01def7885ad69cf66edd75cf8207a5adb64f9
(refactor ListBox/ComboBox to use RenderContext, 2015-05-07), the
problem was that with VCL backends which don't paint on idle, the widget
flickered on keyboard / mouse interaction, similar to the Calc
autofilter.

To avoid side-effects:

- Avoid direct paint in ScrollBar::ImplDragThumb(), instead do
  Invalidate() + Update(), which is the same, but this way dragging the
  scrollbar with the mouse doesn't fails an assertion (because we tried to
  paint directly on a double-buffered window).

- Only call RequestDoubleBuffering() for backends which don't handle
  focus themselves (i.e. not for gtk3); to be in sync with the Calc
  autofilter behavior.

Change-Id: Iec9ad2fe9d32efb8da65cc26cf89cc47912bf545
Reviewed-on: https://gerrit.libreoffice.org/74176
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
(cherry picked from commit d4714b0fdb81e6e561ae526cc517ecc9a40a603e)
Reviewed-on: https://gerrit.libreoffice.org/74709